--- a/lib/matrix.html
+++ b/lib/matrix.html
@@ -1,15 +1,8 @@
 
 <template name="LicenseSwitch">
   {{#if doc}}
-    <div>
-      {{#if hascomments doc._id}}
-        <span class="badge">{{countcomments doc._id}}</span>
-      {{/if}}
-      {{#if doc.verified }}
-        <i class="fa fa-check-square-o" title="Verified by {{doc.verifiedBy}}"></i>
-      {{/if}}
-      {{#afModal class="fa fa-pencil fa-fw" collection="SpdxLicenseCompatibility" template="MatrixForm" operation="update" doc=doc._id}}
-      {{/afModal}}
-    </div>
+    {{#afModal class="fa fa-pencil fa-fw" collection="SpdxLicenseCompatibility"
+      template="MatrixForm" operation="update" doc=doc._id}}
+    {{/afModal}}
   {{/if}}
 </template>
